--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Hello Android</string>
+    <string name="company_name">Udacity</string>
+    <string name="address">2465 Latham St \nMountain View, CA 94043</string>
+    <string name="telephone">650-555-5555</string>
+    <string name="webpage">www.udacity.com</string>
 </resources>
